--- a/popup.html
+++ b/popup.html
@@ -4,35 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <script src="js/main.js" type="text/javascript"></script> -->
+    <script src="js/main.js"></script>
+    <link href="css/main.css" rel="stylesheet">
     <title>FTTH Login</title>
   </head>
   <body>
-    <p id="greet">Set Default Password</p>
-    <input type="text" id="name" />
-    <input
-    id="usern"
-      aria-label="password"
-      name="password"
-      type="text"
-      class=""
-      placeholder="Password"
-    />
-
-    <button onclick="changeGreeting();" value="Submit">ddf</button>
-    <p></p>
+    <div class="flex flex-col mx-3 gap-3">
+      <p id="greet" class="text-xl mx-auto  font-bold underline">Default Password</p>
+      <input id="usern" aria-label="password" name="password"
+       type="text" class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 focus:z-10 sm:text-sm sm:leading-5" placeholder="Set New Default Password" class="" />
+      <div class="flex ml-1">
+        <input type="checkbox" id="usePassCheckbox" class="form-checkbox h-6 w-6 text-indigo-600 transition duration-150 ease-in-out" />
+        <label for="usePassCheckbox" class="ml-2 block text-base leading-5 text-gray-900"> Use Default Password.</label><br />
+      </div>
+      <button id="passSaveButton" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm leading-5 font-medium rounded-md text-white bg-indigo-600 hover:bg-blue-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out">Set Default Password</button>
+    </div>
+    
   </body>
 </html>
-<script >
-
-//change p tag value when input is changed
-function changeGreeting() {
-  console.log("changeGreeting");
-    let val = document.getElementById("usern");
-    val.addEventListener('input', function (evt) {
-        document.getElementById("greet").innerHTML = this.value;
-    })
-}
-
-
-</script>
